########################################################################################
#############           添加所要编译的源文件.                             ############## 
########################################################################################
list( APPEND xmpp_example_Libs_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/adhoc_example.cpp
    
    )


########################################################################################
#############               添加源码子目录                                ############## 
########################################################################################
#add_subdirectory( gloox )

MESSAGE("${CMAKE_CURRENT_SOURCE_DIR} status.")



########################################################################################
#############               设置 gloox 库版本号                         ############## 
########################################################################################




########################################################################################
#############           生成目标库文件 并 标明版本号                      ############## 
########################################################################################
IF (MODULE_xmpp)
    #生成动态库  静态库则 STATIC  
    add_library (xmpplib   SHARED          ${xmpp_example_Libs_SRCS})  
    add_library (xmpps     STATIC          ${xmpp_example_Libs_SRCS})  

ELSE (MODULE_xmpp)
    MESSAGE(STATUS "Not Include MODULE_xmpp module.")
ENDIF (MODULE_xmpp)


